lab1/Test/L1-A-9-1.cmm
int ;
struct H8mBRlaeKm80LcyTXqkQ csDu5ETCQXtoVVu ( int 
  j , struct t4 {
  int stK , TjO218R4 = UspiEUFRA0tw6LOZ9N = UN8grs4Bb 
    || RdkNTrc7OQ3jZMWSm - * lwnPCH6BApgmSJL8zgAh [ h1e 
    && w0V6MdW >= suuJtPu0kgy4V + - pnPfWk7RlTLT0swlt 
    ( AJsf , YKniyJM1szL6cnoP && z5 == - ! ! ( fZrH8jt0Rqh 
    < wgK + ! ( kErEwWnbveuo9Fm = JBOq1EClrb = nF && _bvUE 
    != O8QwQsJgEd3c ) > BAep9_5fVDWtYLQt5 ) + 220775058 
    + CaFJ3pQP9O53eFD ) . eKnhgZzg ] / ! - X ( ) <= 1351779085.1027225598 
    ;
}MKaR90eCtX0e6d_YfaP ) {
  float yo9l8 [ 1110071093 ] 
}
struct {
}J ( ) {
  if ( AP8xTzlJE1_Rrq )   ELtpY_SvKoXSu_OnLay4 ;
else   if ( ZpVoQt7Mx   if ( KlR31QSy )   while ( 
    Q77 )   if ( kVCToIz9lCjYiFM3XHA )   uZbCByGiPWz3J1XSu 
    ;
else   if ( ggqSh5F6P90xZVV ) {
  }else   if ( ud9Z6GdiIp3SAsUI3 )   while ( Z5yKkFDEPI 
    )   hEO0zCx 

else   okp ;




else   if ( o2oq )   int K77LzW20MDFKpHkO4skI ;
  struct X Q7KYNg_i6YNi2n9 ;
  int E1sDENlTotw ;
  Xoe4rX9B ;
}



while ( V9_wpjMiv ) rJ ;

while ( zwJkStBEL7q3JTOQ ) if ( pk7Sjwe97wKXK1mmshF 
  ) {
  while ( mugJF )   while ( tePfV3v94cU8I )   dvCz 
    ;


  if ( P )   NSR772OycMM0uT ;

}else return JRDMs0tvc ;


}
struct Ez E0Vqo2yAHs6RRc , Za1HlTEXpB45cju 

;
